fix javadoc, rename methods, add addHorcAsSyntheticBbox method, add prepareTempPath and put intermediary files in temp dir, cleanup in finally, add/fix tests