@@ -12,7 +12,6 @@ import pdf4u.util.CommandUtility;
 import pdf4u.util.FileService;
 
 import java.io.File;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
@@ -21,7 +20,7 @@ import java.util.List;
 import static org.slf4j.LoggerFactory.getLogger;
 
 /**
- * Service for converting HOCR to searchable PDF
+ * Service for converting hOCR to searchable PDF
  * @author krwong
  */
 public class HocrToPdfService {
@@ -30,10 +29,10 @@ public class HocrToPdfService {
     private static final String HOCR2PDF = "hocr2pdf";
 
     /**
-     * Replace text in HOCR with text from TXT file
-     * HOCR file's bounding boxes are at the line-level. The TXT file is the LLM generated transcript
+     * Replace text in hOCR with text from TXT file
+     * hOCR file's bounding boxes are at the line-level. The TXT file is the LLM generated transcript
      * and likely matches the HOCR line for line.
-     * @param hocrFile a .hocr file
+     * @param hocrFile a .hOCR file
      * @param textFile a .txt file
      */
     public String replaceHocrText(Path hocrFile, Path textFile) throws Exception {
@@ -46,51 +45,62 @@ public class HocrToPdfService {
 
         if (hocrLineCount == 0) {
             if (transcriptLineCount == 0) {
-                log.warn("HOCR file contains no ocr_line elements and transcript is empty; nothing to embed");
+                log.warn("hOCR file contains no ocr_line elements and transcript is empty; nothing to embed");
             } else {
-                log.warn("HOCR file contains no ocr_line elements; creating a synthetic line using the page bbox");
-                // Find the page element for its bbox, fall back to "0 0 0 0" if absent
-                Element pageEl = hocrDoc.getElementsByClass("ocr_page").first();
-                String pageBbox = "bbox 0 0 0 0";
-                if (pageEl != null) {
-                    String pageTitle = pageEl.attr("title");
-                    // title attr is e.g. "bbox 0 0 779 969; image alt21.jpg" — extract just the bbox portion
-                    String[] parts = pageTitle.split(";");
-                    for (String part : parts) {
-                        if (part.trim().startsWith("bbox")) {
-                            pageBbox = part.trim();
-                            break;
-                        }
-                    }
-                }
-                String fullTranscript = String.join(" ", transcriptLines);
-                Element syntheticLine = hocrDoc.body()
-                        .appendElement("span")
-                        .attr("class", "ocr_line")
-                        .attr("title", pageBbox);
-                syntheticLine.appendText(fullTranscript);
+                log.warn("hOCR file contains no ocr_line elements; creating a synthetic line using the page bbox");
+                addHorcAsSyntheticBbox(hocrDoc, transcriptLines);
             }
         } else {
-            transcriptLinesExceedHocrLines(transcriptLines, hocrLines, transcriptLineCount, hocrLineCount);
+            addOverrideHocrLinesWithTranscript(transcriptLines, hocrLines, transcriptLineCount, hocrLineCount);
         }
 
-        Files.write(hocrFile, hocrDoc.outerHtml().getBytes(StandardCharsets.UTF_8));
-
+        Files.writeString(hocrFile, hocrDoc.outerHtml());
         return hocrFile.toString();
     }
 
     /**
+     * When transcript lines exist and there are no ocr_line elements in the .hOCR file,
+     * create a synthetic line using the page bbox
+     * @param hocrDoc hOCR document
+     * @param transcriptLines transcript lines
+     */
+    private void addHorcAsSyntheticBbox(Document hocrDoc, List<String> transcriptLines) {
+        // Find the page element for its bbox, fall back to "0 0 0 0" if absent
+        Element pageEl = hocrDoc.getElementsByClass("ocr_page").first();
+        String pageBbox = "bbox 0 0 0 0";
+        if (pageEl != null) {
+            String pageTitle = pageEl.attr("title");
+            // title attr is e.g. "bbox 0 0 779 969; image alt21.jpg" — extract just the bbox portion
+            String[] parts = pageTitle.split(";");
+            for (String part : parts) {
+                if (part.trim().startsWith("bbox")) {
+                    pageBbox = part.trim();
+                    break;
+                }
+            }
+        }
+        String fullTranscript = String.join(" ", transcriptLines);
+        Element syntheticLine = hocrDoc.body()
+                .appendElement("span")
+                .attr("class", "ocr_line")
+                .attr("title", pageBbox);
+        syntheticLine.appendText(fullTranscript);
+    }
+
+    /**
+     * When transcript lines match the number of hOCR lines, replace each hOCR line with the corresponding
+     *      transcript line
      * When transcript lines exceed the number of hOCR lines, replace each hOCR line with the corresponding
-     * transcript line then append overflow transcript lines to the last hOCr element
+     *      transcript line then append overflow transcript lines to the last hOCr element
      * @param transcriptLines transcript lines
      * @param hocrLines hocr_line elements
      * @param transcriptLineCount number of transcript lines
      * @param hocrLineCount number of hocr_line elements
      */
-    private void transcriptLinesExceedHocrLines(List<String> transcriptLines, Elements hocrLines,
-                                                int transcriptLineCount, int hocrLineCount) {
+    private void addOverrideHocrLinesWithTranscript(List<String> transcriptLines, Elements hocrLines,
+                                                    int transcriptLineCount, int hocrLineCount) {
         if (transcriptLineCount > hocrLineCount) {
-            log.warn("Transcript has {} lines but HOCR only has {} line elements; {} overflow line(s) will be " +
+            log.debug("Transcript has {} lines but HOCR only has {} line elements; {} overflow line(s) will be " +
                             "appended to the last HOCR line", transcriptLineCount, hocrLineCount,
                     transcriptLineCount - hocrLineCount);
         }
@@ -106,12 +116,10 @@ public class HocrToPdfService {
         // Append any overflow transcript lines to the last hOCR line element
         if (transcriptLineCount > hocrLineCount) {
             Element lastLine = hocrLines.last();
-            if (lastLine != null) {
-                for (int i = hocrLineCount; i < transcriptLineCount; i++) {
-                    String overflow = transcriptLines.get(i);
-                    if (!overflow.isBlank()) {
-                        lastLine.appendText(" " + overflow);
-                    }
+            for (int i = hocrLineCount; i < transcriptLineCount; i++) {
+                String overflow = transcriptLines.get(i);
+                if (!overflow.isBlank()) {
+                    lastLine.appendText(" " + overflow);
                 }
             }
         }
